Server JWT Auth

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,9 +24,9 @@
   background-color: blueviolet;
 } */
 
-body {
+/* body {
   background-image: url(./shoplist1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: relative;
-}
+} */
